po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 11:25+0000\n"
+"PO-Revision-Date: 2017-01-29 03:29+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -106,15 +106,15 @@ msgstr "Tip(ovi) odbijanja"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: Trackable Opens"
-msgstr ""
+msgstr "Mailing: Ispraćena otvaranja"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: Trackable URL Clicks"
-msgstr ""
+msgstr "Mailing: Ispraćeni URL klikovi"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: Trackable Replies"
-msgstr ""
+msgstr "Mailing: Ispraćeni odgovori"
 
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/Selector/Event.php
 #: templates/CRM/Mailing/Page/Report.tpl
@@ -149,15 +149,15 @@ msgstr "Tipovi odbijanja"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable Opens"
-msgstr ""
+msgstr "Ispraćena otvaranja"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable URLs"
-msgstr ""
+msgstr "Ispraćeni URLovi"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable Replies"
-msgstr ""
+msgstr "Ispraćeni odgovori"
 
 #: CRM/Mailing/DAO/BouncePattern.php
 msgid "Pattern"
@@ -186,7 +186,7 @@ msgstr "HTML tekst mailing komponente"
 #: CRM/Mailing/DAO/Component.php CRM/Mailing/DAO/Mailing.php
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Body Text"
-msgstr ""
+msgstr "Tekst sadržaja poruke"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component is Default?"
@@ -222,19 +222,19 @@ msgstr "Tip mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Name"
-msgstr ""
+msgstr "OD ime mailinga"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Email"
-msgstr ""
+msgstr "OD email mailinga"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Replyto Email"
-msgstr ""
+msgstr "Email za odgovore"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Body Html"
-msgstr ""
+msgstr "HTML sadržaja poruke"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Url Tracking"
@@ -444,7 +444,7 @@ msgstr "Zaglavlja"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Body"
-msgstr ""
+msgstr "Sadržaj poruke"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Added At"
@@ -464,21 +464,21 @@ msgstr "Nepoznato"
 
 #: CRM/Mailing/Event/BAO/Subscribe.php
 msgid "You are already subscribed in %1, your subscription is %2."
-msgstr ""
+msgstr "Već ste prijavljeni za %1, vaša prijava je %2."
 
 #: CRM/Mailing/Event/BAO/Subscribe.php
 msgid ""
 "Your subscription request has been submitted for %1. Check your inbox "
 "shortly for the confirmation email(s). If you do not see a confirmation "
 "email, please check your spam/junk mail folder."
-msgstr ""
+msgstr "Vaš zahtev za prijavu za %1 je prosleđen. Proverite vaš email uskoro za potvrdnu email poruku(e). Ukoliko ne možete da nađete potvrdni email, proverite spam folder."
 
 #: CRM/Mailing/Event/BAO/Subscribe.php
 msgid ""
 "We had a problem processing your subscription request for %1. You have tried"
 " to subscribe to a private group and/or we encountered a database error. "
 "Please contact the site administrator."
-msgstr ""
+msgstr "Došlo je do problema sa obradom vašeg zahteva za prijavu za %1. Pokušali ste da se prijavite u privatnu grupu ili je došlo do greške u bazi. Kontaktirajte administratora sajta."
 
 #: CRM/Mailing/Event/DAO/Bounce.php CRM/Mailing/Event/DAO/Delivered.php
 #: CRM/Mailing/Event/DAO/Forward.php CRM/Mailing/Event/DAO/Opened.php
@@ -548,15 +548,15 @@ msgstr ""
 
 #: CRM/Mailing/Form/Component.php
 msgid "Component Type"
-msgstr ""
+msgstr "Tip komponente"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Body - TEXT Format"
-msgstr ""
+msgstr "Sadržaj poruke - TEKST format"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Body - HTML Format"
-msgstr ""
+msgstr "Sadržaj poruke - HTML format"
 
 #: CRM/Mailing/Form/Component.php
 msgid "The mailing component '%1' has been saved."
@@ -581,7 +581,7 @@ msgstr "Više informacija o tokenima.."
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Invalid form parameters."
-msgstr ""
+msgstr "Nevažeći parametri formulara."
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Forward Mailing: %1"
@@ -598,9 +598,9 @@ msgstr "Prosledi"
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Mailing is not forwarded to the given email address."
 msgid_plural "Mailing is not forwarded to the given email addresses."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "Mailing nije prosleđen na datu email adresu."
+msgstr[1] "Mailing nije prosleđen na date email adrese."
+msgstr[2] "Mailing nije prosleđen na date email adrese."
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Mailing is forwarded successfully to %count email address."
@@ -626,7 +626,7 @@ msgstr "Ukloni duplikate emailova?"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Unsubscription Group"
-msgstr ""
+msgstr "Grupa za odjavu"
 
 #: CRM/Mailing/Form/Group.php
 msgid "INCLUDE Recipients of These Mailing(s)"
@@ -647,7 +647,7 @@ msgstr ""
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
 #: CRM/Mailing/Form/Upload.php
 msgid "Click the 'Continue' action to resume working on it."
-msgstr ""
+msgstr "Kliknite na 'Nastavi' da nastavite sa radom."
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Schedule.php
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
@@ -704,7 +704,7 @@ msgstr "Email: %1 je uspešno isključen"
 msgid ""
 "The email address: %1 you have entered does not match the email associated "
 "with this opt out request."
-msgstr ""
+msgstr "Email adresa %1 koju ste uneli ne poklapa se sa email-om u vezi ovog zahteva za isključenje."
 
 #: CRM/Mailing/Form/Schedule.php
 msgid "Schedule Mailing"
@@ -752,7 +752,7 @@ msgstr "Prosledi odgovore?"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Track Click-throughs?"
-msgstr ""
+msgstr "Prati klikove?"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Track Opens?"
@@ -822,7 +822,7 @@ msgid ""
 "Click 'Next' when you are ready to Schedule or Send your live mailing (you "
 "will still have a chance to confirm or cancel sending this mailing on the "
 "next page)."
-msgstr ""
+msgstr "Kliknite 'Dalje' kada ste spremni da zakažete ili pošaljete ovaj mailing (imaćete još jedan upit za potvrđivanje ili otkazivanja slanja ovog mailinga na sledećoj stranici)."
 
 #: CRM/Mailing/Form/Test.php
 msgid "Test message sent"
@@ -859,13 +859,13 @@ msgstr "Email adresa %1 koju ste uneli ne poklapa se sa email-om u vezi ovog zah
 msgid ""
 "There is no valid from email address present. You can add here <a "
 "href='%1'>Add From Email Address.</a>"
-msgstr ""
+msgstr "Ne postoji važeća OD email adresa. Možete je dodati ovde <a href='%1'>Dodaj OD email adresu.</a>"
 
 #: CRM/Mailing/Form/Upload.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/BlockMailing.html
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid "Reply-To"
-msgstr ""
+msgstr "Odgovor na"
 
 #: CRM/Mailing/Form/Upload.php CRM/Mailing/Selector/Search.php
 #: templates/CRM/Mailing/Form/Task/Print.tpl
@@ -878,7 +878,7 @@ msgstr "Postavi HTML poruku"
 
 #: CRM/Mailing/Form/Upload.php
 msgid "Please provide either a Text or HTML formatted message - or both."
-msgstr ""
+msgstr "Upišite poruku u formatu teksta ili HTMLa - ili oba."
 
 #: CRM/Mailing/Form/Upload.php
 msgid "More information on required tokens..."
@@ -992,7 +992,7 @@ msgstr "Testiranje"
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/EditCtrl/report.html
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/services.js
 msgid "Final"
-msgstr ""
+msgstr "Konačna verzija"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test different \"Subject\" lines"
@@ -1000,19 +1000,19 @@ msgstr "Testiraj različite tekstove za \"predmet\""
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test different \"From\" lines"
-msgstr ""
+msgstr "Testiraj različite tekstove za \"OD\""
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test entirely different emails"
-msgstr ""
+msgstr "Testiraj različite mailove"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Total Unique Clicks"
-msgstr ""
+msgstr "Ukupno jedinstvenih klikova"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Total Clicks on a particular link"
-msgstr ""
+msgstr "Ukupno klikova na jedan link"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Standalone"
@@ -1044,11 +1044,11 @@ msgstr "Neotvoreno/skriveno"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Clicked "
-msgstr ""
+msgstr "Klikovi"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Not Clicked "
-msgstr ""
+msgstr "Bez klika"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Replied "
@@ -1131,12 +1131,12 @@ msgstr "Odgovori"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Click-throughs"
-msgstr ""
+msgstr "Jedinstvenih klikova"
 
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Click-throughs"
-msgstr ""
+msgstr "Klikova"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Tracked Opens"
@@ -1238,7 +1238,7 @@ msgstr "Prati odgovore"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond to Replies"
-msgstr ""
+msgstr "Automatski odgovor na odgovore?"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond Message"
@@ -1260,7 +1260,7 @@ msgstr "Isključi:"
 #: ang/crmMailing/PreviewComponentDialogCtrl.html
 #: ang/crmMailing/PreviewMgr/full.html ang/crmMailingAB/EditCtrl/edit.html
 msgid "Plain Text"
-msgstr ""
+msgstr "Običan tekst"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click Throughs"
@@ -1291,7 +1291,7 @@ msgstr "Ponovna prijava"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Publication"
-msgstr ""
+msgstr "Publikacija"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
@@ -1323,7 +1323,7 @@ msgstr "Obavezni tokeni fale."
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "This mailing has been submitted."
-msgstr ""
+msgstr "Ovaj mailing je poslat."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
@@ -1386,12 +1386,12 @@ msgstr ""
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Submit and Approve Mailing"
-msgstr ""
+msgstr "Pošalji i odobri mailing"
 
 #: ang/crmMailing/EditMailingCtrl.js ang/crmMailingAB/EditCtrl.js
 #: ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Submitting..."
-msgstr ""
+msgstr "Šaljem..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
@@ -1517,7 +1517,7 @@ msgstr "Isključi ranije primaoce iz"
 msgid ""
 "This mailing was generated based on search results. The search results "
 "cannot be removed."
-msgstr ""
+msgstr "Ovaj mailing je generisan na osnovu rezultata pretrage. Rezultati pretrage ne mogu biti uklonjeni"
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save the current mailing as a template."
@@ -1616,15 +1616,15 @@ msgstr "Pošalji A/B test u:"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess"
-msgstr ""
+msgstr "Procena"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess A/B results on an on-going basis"
-msgstr ""
+msgstr "Procena A/B rezultata - konstantna"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess A/B test at:"
-msgstr ""
+msgstr "Procena A/B rezultata u:"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Setup"
@@ -1667,15 +1667,15 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Select as Final"
-msgstr ""
+msgstr "Izaberi kao finalnu verziju"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Delivery"
-msgstr ""
+msgstr "Dostava"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not selected"
-msgstr ""
+msgstr "Nije izabrano"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Started at"
@@ -1731,7 +1731,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Select Final Mailing (Test %1)"
-msgstr ""
+msgstr "Izaberi konačni mailing (Test %1)"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Status -"
@@ -1829,7 +1829,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Group.hlp templates/CRM/Mailing/MailingUI.hlp
 msgid "General Monthly Newsletter: 200709"
-msgstr ""
+msgstr "General Monthly Newsletter: 200709"
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Search-based mailings require an \"unsubscribe tracking\" group."
@@ -1895,7 +1895,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Email selection"
-msgstr ""
+msgstr "Selekcija emaila"
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -2071,7 +2071,7 @@ msgstr "Imate dve opcije da definišete vidljivost mailinga"
 msgid ""
 "\"public pages\" will make the content of this mailing be viewable as a web "
 "page by everyone who has the permission of \"view public CiviMail content\""
-msgstr ""
+msgstr "\"javne strane\" će sadržaj ovog mailinga učiniti dostupnim za pregled bilo kome ko ima dozvolu za \"pregled javnog CiviMail sadržaja\""
 
 #: templates/CRM/Mailing/Form/Settings.hlp
 msgid ""
@@ -2103,7 +2103,7 @@ msgstr ""
 msgid ""
 "Track the number of times recipients open this mailing in their email "
 "software."
-msgstr ""
+msgstr "Prati koliko puta su primaoci otvorili ovaj mailing u svom mail softveru."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2146,7 +2146,7 @@ msgid ""
 "Enter your email address and click <strong>Subscribe</strong>. You will "
 "receive a confirmation request via email shortly. Your subscription will be "
 "activated after you respond to that email."
-msgstr ""
+msgstr "Unesite svoju email adresu i kliknite na <strong>Prijava</strong>. Ubrzo ćete dobiti email sa zahtevom za potvrdu. Vaša prijava će biti aktivirana nakon što odgovorite na taj email"
 
 #: templates/CRM/Mailing/Form/Subscribe.tpl
 msgid ""
@@ -2174,7 +2174,7 @@ msgid ""
 "It's a good idea to test your mailing by sending it to yourself and/or a "
 "selected group of people in your organization. You can also view your "
 "content in the preview panel below."
-msgstr ""
+msgstr "Uvek je dobro testirati mailing tako što ćete ga poslati sebi i/ili odabranoj grupi ljudi u vašoj organizaciji. Sadržaj takođe možete pogledati u sekciji za pregled ispod."
 
 #: templates/CRM/Mailing/Form/Test.hlp
 msgid ""
@@ -2251,7 +2251,7 @@ msgstr ""
 msgid ""
 "You can either <strong>upload</strong> the mailing content from your "
 "computer OR <strong>compose</strong> the content on this screen."
-msgstr ""
+msgstr "Možete <strong>postaviti</strong> sadržaj mailinga sa vašeg kompjutera ILI <strong>sastaviti</strong> sadržaj na ovom ekranu"
 
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid "Auto-Generated"
@@ -2261,13 +2261,13 @@ msgstr "Auto-generisano"
 msgid ""
 "Browse to the <strong>TEXT</strong> message file you have prepared for this "
 "mailing."
-msgstr ""
+msgstr "Izaberite <strong>Tekstualnu</strong> poruku koju ste pripremili za ovaj mailing."
 
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid ""
 "Browse to the <strong>HTML</strong> message file you have prepared for this "
 "mailing."
-msgstr ""
+msgstr "Izaberite <strong>HTML</strong> poruku koju ste pripremili za ovaj mailing."
 
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid "Header / Footer"
@@ -2283,7 +2283,7 @@ msgid ""
 "You may choose to include a pre-configured Footer block below your message. "
 "This is a good place to include the required unsubscribe, opt-out and postal"
 " address tokens."
-msgstr ""
+msgstr "Možete uključiti unapred pripremljeno podnožje ispod vaše poruke. Ovo je dobro mesto za postavljanje neophodnih tokena za odjavu, isključenje i poštansku adresu"
 
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid "More information and sample messages..."
@@ -2346,7 +2346,7 @@ msgstr "Stvari koje treba proveriti u testu mailinga:"
 msgid ""
 "Verify the content and formatting looks consistent across various email "
 "clients."
-msgstr ""
+msgstr "Proverite da li će sadržaj i format ostati isti na različitim email klijentima."
 
 #: templates/CRM/Mailing/Page/Browse.hlp
 msgid ""
@@ -2407,7 +2407,7 @@ msgstr "Ili možete pretražiti <a href='%1'>arhivirane %2</a>"
 
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Body HTML"
-msgstr ""
+msgstr "HTML sadržaja poruke"
 
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Add Mailing Component"
@@ -2431,7 +2431,7 @@ msgstr "Trenutno nema %1."
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Delivery Summary"
-msgstr ""
+msgstr "Kratak pregled dostave"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid ""
@@ -2479,7 +2479,7 @@ msgstr "Podešavanja mailinga"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Reply-to email"
-msgstr ""
+msgstr "Odgovori na email"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Forward replies"
@@ -2487,11 +2487,11 @@ msgstr "Prosledi odgovore"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Off"
-msgstr ""
+msgstr "Isključeno"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Auto-respond to replies"
-msgstr ""
+msgstr "Automatski odgovor na odgovore"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Open tracking"
@@ -2499,7 +2499,7 @@ msgstr "Praćenje otvaranja"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "URL Click-through tracking"
-msgstr ""
+msgstr "URL praćenje klikova"
 
 #: templates/CRM/Mailing/Page/Resubscribe.tpl
 msgid "has been successfully resubscribed."
@@ -2515,7 +2515,7 @@ msgstr "Otvaranja/ klikovi"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Document Body"
-msgstr ""
+msgstr "Sadržaj dokumenta"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
@@ -2573,7 +2573,7 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/Opened.php
 msgid "Mailing Opened ID"
-msgstr ""
+msgstr "ID otvorenog mailinga"
 
 #: CRM/Mailing/Event/DAO/Reply.php
 msgid "Reply ID"
@@ -2593,7 +2593,7 @@ msgstr ""
 
 #: CRM/Mailing/Form/Component.php
 msgid "Please provide either HTML or TEXT format for the Body."
-msgstr ""
+msgstr "Upišite HTML ili tekstualni format sadržaja poruke."
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Public View"
