--- a/po/sr_RS@latin/queue.po
+++ b/po/sr_RS@latin/queue.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 09:40+0000\n"
+"PO-Revision-Date: 2017-01-29 03:40+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr "Ime redosleda"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Submit Time"
-msgstr ""
+msgstr "Vreme dostave"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Release Time"
@@ -35,7 +35,7 @@ msgstr ""
 
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
-msgstr ""
+msgstr "Pokretač redosleda"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue ID"
