po: update po/sr_RS@latin/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 09:18+0000\n"
+"PO-Revision-Date: 2017-01-29 03:42+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -146,7 +146,7 @@ msgstr "Kontakt(i) sa liste ne mogu biti dodati u grupu."
 #: CRM/Report/Form/Activity.php
 msgid ""
 "Please enable 'Include Case Activities' to filter with Case Activity types."
-msgstr ""
+msgstr "Aktivirajte \"Uključi aktivnosti predmeta\" da biste postavili filter za tip aktivnosti predmeta."
 
 #: CRM/Report/Form/Activity.php CRM/Report/Form/ActivitySummary.php
 #: CRM/Report/Form/Case/Detail.php CRM/Report/Form/Contact/Detail.php
@@ -179,7 +179,7 @@ msgstr ""
 
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "Interviewed"
-msgstr ""
+msgstr "Intervjuisao/la"
 
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "Interviewer Name"
@@ -250,7 +250,7 @@ msgstr "Datum poslednje akcije"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Subject of the last completed activity in the case"
-msgstr ""
+msgstr "Subjekat poslednje aktivnosti u predmetu"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Activity type of the last completed activity"
