po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-27 14:58+0000\n"
+"PO-Revision-Date: 2017-01-30 11:15+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -42,7 +42,7 @@ msgid ""
 "One or more line items have a different financial type than the "
 "contribution. Editing the financial type is not yet supported in this "
 "situation."
-msgstr ""
+msgstr "Jedna ili više stavki imaju drugačiji finansijski tip u odnosu na donaciju. Uređivanje finansijskog tipa još uvek nije podržano za ovakve situacije."
 
 #: CRM/Contribute/BAO/ContributionPage.php
 msgid "Automatically Generated"
@@ -78,7 +78,7 @@ msgstr "Odaberite period (npr. meseci, godina) koliko često želite da donirate
 msgid ""
 "This Premium is being linked to <a href='%1'>Online Contribution page</a>. "
 "Please remove it in order to delete this Premium."
-msgstr ""
+msgstr "Ova nagrada je povezana sa <a href='%1'>Stranicom za onlajn doniranje</a>. Uklonite stranicu kako biste mogli da obrišete ovu nagradu."
 
 #: CRM/Contribute/BAO/Premium.php
 msgid "Selected Option"
@@ -1106,27 +1106,27 @@ msgstr "Nevažeće članstvo"
 msgid ""
 "A payment processor must be selected for this contribution page (contact the"
 " site administrator for assistance)."
-msgstr ""
+msgstr "Za ovu stranicu za donacije morate odabrati procesor uplate (za pomoć kontaktirajte administratora sajta)."
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid ""
 "This page includes a Profile with Membership fields - but the Membership "
 "Block is NOT enabled. Please notify the site administrator."
-msgstr ""
+msgstr "Ova strana sadrži profil sa poljima za članstvo - ali blok članstva NIJE uključen. Obavestite administratora sajta."
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid ""
 "The requested online contribution page is missing a required Contribution "
 "Amount section or Membership section or Price Set. Please check with the "
 "site administrator for assistance."
-msgstr ""
+msgstr "Tražena strana za onlajn donacije nema neophodnu sekciju za iznos donacije, članstvo ili set cena. Konsultujte se sa adrministratorom za pomoć."
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid ""
 "Oops. It looks like you have an incorrect or incomplete link (URL). Please "
 "make sure you've copied the entire link, and try again. Contact the site "
 "administrator if this error persists."
-msgstr ""
+msgstr "Izgleda da imate netačan ili nepotpun link (URL). Proverite da li ste iskopirali ceo lik i pokušajte ponovo. Kontaktirajte administratora sajta ukoliko se ova greška ponovi."
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Oops. You cannot make a payment for this pledge - pledge status is %1."
@@ -1273,7 +1273,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "At least one recurring frequency option needs to be checked."
-msgstr ""
+msgstr "Barem jedna opcija učestalosti periodične donacije mora biti čekirana."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "At least one pledge frequency option needs to be checked."
@@ -1306,7 +1306,7 @@ msgstr ""
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Contribute/Form/ContributionPage.php
 msgid "civicrm_contribution_page"
-msgstr ""
+msgstr "civicrm_contribution_page"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Contribute/Form/ContributionPage/TabHeader.php
@@ -1323,13 +1323,13 @@ msgstr "Uključi profile"
 msgid ""
 "You must enable the Membership Block for this Contribution Page if you want "
 "to include a Profile with Membership fields."
-msgstr ""
+msgstr "Morate uključiti blok članstva za ovu stranicu za doniranje ukoliko želite da sadrži profil sa poljima za članstvo."
 
 #: CRM/Contribute/Form/ContributionPage/Custom.php
 msgid ""
 "You should move the membership related fields in the \"On Behalf\" profile "
 "for this Contribution Page"
-msgstr ""
+msgstr "Pomerite polja povezana sa članstvom u \"U ime\" profil za ovu stranicu za doniranje"
 
 #: CRM/Contribute/Form/ContributionPage/Delete.php
 msgid "Delete Contribution Page"
@@ -1572,11 +1572,11 @@ msgstr "Vidi formular za doniranje"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Premium Product"
-msgstr ""
+msgstr "Nagrada - proizvod"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "A product with this name already exists. Please select another name."
-msgstr ""
+msgstr "Proizvod sa ovim imenom već postoji. Izaberite drugo ime."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Upload from my computer"
@@ -1596,11 +1596,11 @@ msgstr "Bez prikaza slike"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Premium Image"
-msgstr ""
+msgstr "Slika nagrade"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Please select an option for the premium image."
-msgstr ""
+msgstr "Izaberite opciju za sliku nagrade"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Thumbnail URL"
@@ -1787,7 +1787,7 @@ msgstr "Obradi profakturu (profakture)"
 msgid ""
 "Email was NOT sent to %1 contacts (no email address on file, or "
 "communication preferences specify DO NOT EMAIL, or contact is deceased)."
-msgstr ""
+msgstr "Email NIJE poslat %1 kontakta -(nema zabeležene email adrese ili je u podešavanjima komunikacije uključeno NE SLATI EMAIL ili je kontakt preminuo/la)."
 
 #: CRM/Contribute/Form/Task/Invoice.php CRM/Contribute/Form/Task/PDF.php
 msgid "Email Error"
@@ -1851,7 +1851,7 @@ msgstr "Grupne donacije"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Separator (grouped contributions)"
-msgstr ""
+msgstr "Razdelnik (grupne donacije)"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Generate PDFs for printing (only)"
@@ -1861,23 +1861,23 @@ msgstr "Kreiraj (samo) PDF za štampu"
 msgid ""
 "Send emails where possible. Generate printable PDFs for contacts who cannot "
 "receive email."
-msgstr ""
+msgstr "Pošalji email kada god je moguće. Generiši PDF fajlove za štampu za kontakte koji ne mogu da primaju email."
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Send emails where possible. Generate printable PDFs for all contacts."
-msgstr ""
+msgstr "Pošalji email kada god je moguće. Generiši PDF fajlove za štampu za sve kontakte."
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid ""
 "Send emails with an attached PDF where possible. Generate printable PDFs for"
 " contacts who cannot receive email."
-msgstr ""
+msgstr "Pošalji email sa PDFom u prilogu gde god je moguće. Generiši PDF fajlove za štampu za kontakte koji ne mogu da primaju email."
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid ""
 "Send emails with an attached PDF where possible. Generate printable PDFs for"
 " all contacts."
-msgstr ""
+msgstr "Pošalji email sa PDFom u prilogu gde god je moguće. Generiši PDF fajlove za štampu za sve kontakte."
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Print and email options"
@@ -1949,7 +1949,7 @@ msgstr ""
 msgid ""
 "This Transaction ID already exists in the database. Include the account "
 "number for checks."
-msgstr ""
+msgstr "ID transakcije već postoji u bazi podataka. Uključite broj računa za čekove."
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid "Update Pending Status"
@@ -1979,7 +1979,7 @@ msgstr "Nemate dozvolu za otkazivanje pretplate."
 
 #: CRM/Contribute/Form/UpdateBilling.php
 msgid "%1 processor doesn't support updating subscription billing details."
-msgstr ""
+msgstr "%1 procesor ne podržava ažuriranje detalja pretplate za naplatu."
 
 #: CRM/Contribute/Form/UpdateBilling.php
 msgid "Details Updated"
@@ -1993,11 +1993,11 @@ msgstr ""
 
 #: CRM/Contribute/Form/UpdateBilling.php
 msgid "Recurring Contribution Billing Details Updated"
-msgstr ""
+msgstr "Detalji za naplatu periodične donacije ažurirani"
 
 #: CRM/Contribute/Form/UpdateBilling.php
 msgid "There was some problem updating the billing details."
-msgstr ""
+msgstr "Došlo je do problema sa ažuriranjem detalja za naplatu."
 
 #: CRM/Contribute/Form/UpdateBilling.php
 #: CRM/Contribute/Form/UpdateSubscription.php
@@ -2084,7 +2084,7 @@ msgstr "Vidi URL donacije"
 
 #: CRM/Contribute/Info.php
 msgid "CiviCRM Contribution Engine"
-msgstr ""
+msgstr "CiviCRM Contribution Engine"
 
 #: CRM/Contribute/Info.php
 msgid "access CiviContribute"
@@ -2218,7 +2218,7 @@ msgstr "Obriši premijum"
 
 #: CRM/Contribute/Page/Premium.php
 msgid "Are you sure you want to remove this product form this page?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete ovaj proizvod sa ove stranice?"
 
 #: CRM/Contribute/Page/Tab.php
 #: templates/CRM/Contribute/Page/ContributionRecur.tpl
@@ -2304,11 +2304,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Net value of the contribution (Total Amount minus Fee)."
-msgstr ""
+msgstr "Neto iznos uplate (Ukupno minus provizija)."
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Unique internal reference ID for this contribution."
-msgstr ""
+msgstr "Jedinstveni ID za internu upotrebu za ovu donaciju."
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Unique internal Credit Note ID for this contribution."
@@ -2316,7 +2316,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Date that a thank-you message was sent to the contributor."
-msgstr ""
+msgstr "Datum kada je zahvalnica poslata donatoru."
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/PaymentReminders.tpl
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
@@ -2338,26 +2338,26 @@ msgstr ""
 msgid ""
 "Unique payment ID for this transaction. The Payment Processor's transaction "
 "ID will be automatically stored here on online contributions."
-msgstr ""
+msgstr "Jedinstveni ID uplate za ovu transakciju. ID transakcije procesora uplata će biti automatski zabeležen ovde za onlajn donacije"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.hlp
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid ""
 "For offline contributions you can record a bank transfer ID or other "
 "identifier if applicable."
-msgstr ""
+msgstr "Za oflajn donacije možete zabeležiti ID transfera ili neki drugi identifikator."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.hlp
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid "Choose the method by which this transaction was paid."
-msgstr ""
+msgstr "Izaberite metod kojim je ova transakcija plaćena."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.hlp
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid ""
 "Note: if the correct payment instrument is not listed here (e.g. for in-kind"
 " donations) ask your administrator to add a new option to this list."
-msgstr ""
+msgstr "Beleška: Ukoliko ne postoji tačan instrument plaćanja u ovoj listi (npr. za donacije u naturi) možete pitati vašeg administratora da doda novu opciju."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "No additional payments found for this %1 record"
@@ -2365,7 +2365,7 @@ msgstr "Nisu pronađene dodatne uplate za ovaj zapis %1"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "submit credit card payment"
-msgstr ""
+msgstr "Dostavi uplatu kreditnom karticom"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Due"
@@ -2621,15 +2621,15 @@ msgstr "Koristi postojeću organizaciju"
 
 #: templates/CRM/Contribute/Form/Contribution/PremiumBlock.tpl
 msgid "Your Premium Selection"
-msgstr ""
+msgstr "Vaša selekcija nagrada"
 
 #: templates/CRM/Contribute/Form/Contribution/PremiumBlock.tpl
 msgid "You must contribute at least %1 to get this item"
-msgstr ""
+msgstr "Morate donirati barem %1 da biste dobili ovu nagradu"
 
 #: templates/CRM/Contribute/Form/Contribution/PremiumBlock.tpl
 msgid "Contribute %1 Instead"
-msgstr ""
+msgstr "Doniraj %1"
 
 #: templates/CRM/Contribute/Form/Contribution/PremiumBlock.tpl
 msgid "Minimum: %1"
@@ -2637,7 +2637,7 @@ msgstr "Minimum: %1"
 
 #: templates/CRM/Contribute/Form/Contribution/PremiumBlock.tpl
 msgid "You must contribute more to get that item"
-msgstr ""
+msgstr "Morate donirati više da biste dobili ovu nagradu"
 
 #: templates/CRM/Contribute/Form/Contribution/PreviewHeader.tpl
 msgid "Test-drive Your Contribution Page"
@@ -2782,19 +2782,19 @@ msgstr ""
 msgid ""
 "Use this form to submit a new contribution on behalf of %1. <strong>A %2 "
 "transaction will be submitted</strong> using the selected payment processor."
-msgstr ""
+msgstr "Upotrebite ovaj formular kako donirali u ime %1. <strong>Transakcija %2 će biti poslata</strong> pomoću odabranog procesora uplate."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
 "Use this form to submit a new contribution. <strong>A %2 transaction will be"
 " submitted</strong> using the selected payment processor."
-msgstr ""
+msgstr "Upotrebite ovaj formular kako biste napravili novu donaciju. <strong>Transakcija %2 će biti poslata</strong> pomoću odabranog procesora uplate."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
 "WARNING: Deleting this contribution will result in the loss of the "
 "associated financial transactions (if any)."
-msgstr ""
+msgstr "Upozorenje: Brisanjem ove donacije će doći do gubitka svih podataka o uplatama (ukoliko postoje)."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "submit credit card contribution"
@@ -2915,13 +2915,13 @@ msgstr ""
 msgid ""
 "Use this form to select a premium to be offered on this Online Contribution "
 "Page."
-msgstr ""
+msgstr "Upotrebite ovaj formular da izaberete nagradu koja će biti ponuđena na ovoj stranici za onlajn donacije."
 
 #: templates/CRM/Contribute/Form/ContributionPage/AddProduct.tpl
 msgid ""
 "Are you sure you want to remove this premium product from this Contribution "
 "page?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete ovu nagradu sa ove stranice?"
 
 #: templates/CRM/Contribute/Form/ContributionPage/AddProduct.tpl
 msgid ""
@@ -2976,7 +2976,7 @@ msgstr ""
 msgid ""
 "Select the currency to be used for contributions submitted from this "
 "contribution page."
-msgstr ""
+msgstr "Odaberite valutu za donacije koje će biti primljene preko ove stranice."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -3028,7 +3028,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Can users also set an interval (e.g. every '3' months)?"
-msgstr ""
+msgstr "Da li korisnici mogu da podese interval (npr. svaka '3' meseca)?"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -3046,11 +3046,11 @@ msgstr ""
 msgid ""
 "Which frequencies can the user pick from (e.g. every 'week', every 'month', "
 "every 'year')?"
-msgstr ""
+msgstr "Koje učestalosti su dostupne korisnicima (npr. svaka 'nedelja', svaki 'mesec', svake 'godine')?"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Can they also set an interval (e.g. every '3' months)?"
-msgstr ""
+msgstr "Da li korisnici mogu da podese interval (npr. svaka '3' meseca)?"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -3068,7 +3068,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Fixed Contribution Options"
-msgstr ""
+msgstr "Opcije fiksne donacije"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -3118,7 +3118,7 @@ msgid ""
 "Your site may already have profile(s) which were previously created for this"
 " purpose, in which case you can re-use them for any number of online "
 "contribution pages."
-msgstr ""
+msgstr "Vaš sajt možda već ima profil(e) kreiran za ovu svrhu, i u tom slučaju ih možete koristiti za bilo koji broj stranica za onlajn donacije"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid ""
@@ -3222,7 +3222,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Premium.tpl
 msgid "Premiums Settings"
-msgstr ""
+msgstr "Podešavanja nagrada"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Premium.tpl
 msgid "Title to appear at the top of the Premiums section."
@@ -3234,7 +3234,7 @@ msgid ""
 " Premiums section title. You may include HTML formatting tags. You can also "
 "include images, as long as they are already uploaded to a server - reference"
 " them using complete URLs."
-msgstr ""
+msgstr "Unesite sadržaj za uvodnu poruku. Ova poruka će se pojaviti ispod naslova sekcije sa nagradama. Možete koristiti tagove HTML formata. Možete dodati i slike ukoliko su već postavljene na server - možete ih dodati koristeći kompletne URL-ove."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Premium.tpl
 msgid ""
@@ -3372,7 +3372,7 @@ msgstr ""
 msgid ""
 "Social media links will be included on the Contribution Thank-you page, "
 "Tell-a-Friend page (if enabled), and in contribution receipt emails."
-msgstr ""
+msgstr "Linkovi za društvene mreže će biti uključeni na stranicu sa zahvalnicom, recite prijatelju stranicu (ukoliko je uključena), kao i u emailovima sa potvrdama."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
@@ -3585,7 +3585,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Thank-you Page Footer"
-msgstr ""
+msgstr "Podnožje stranice sa zahvalnicom"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
@@ -3623,7 +3623,7 @@ msgstr "Ime pošiljaoca priznanice"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Enter the FROM name to be used in receipt emails."
-msgstr ""
+msgstr "Unesite ime za OD polje emailova sa priznanicom."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Email Address of Receipt Sender"
@@ -3631,7 +3631,7 @@ msgstr "Email adresa pošiljaoca priznanice"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Enter the FROM email address to be used in receipt emails."
-msgstr ""
+msgstr "Unesite email adresu za OD polje emailova sa priznanicom."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Additional Receipt Message"
